bug: Correct color next to call to action
Added background color to correct color next to calltoaction.
Removed some extra spacing in css and index.html.

--- a/style.css
+++ b/style.css
@@ -6,20 +6,22 @@
     font-family: Roboto;
 }
 
+body {
+    background-color: #F9FAF8;
+}
+
 ul {
     list-style: none;
 }
+
 .pagecontainer {
     padding-left: 15rem;
     padding-right: 15rem;
 }
 
 /* Work on Title & Navigation bar */
-
 .header {
     background-color: #1F2937;
-
-    
 }
 
 .titlebar {
@@ -28,7 +30,6 @@ ul {
     align-items: center;
     align-self:flex-end;
     flex: 1;
-    
 }
 
 .logo {
@@ -36,7 +37,6 @@ ul {
     align-self: flex-start;
     flex: 1;
     font-weight:500;
-    
 }
 
 .navigation {
@@ -66,7 +66,6 @@ a:active {
     display: flex;
     flex-direction: column;
     flex: 1;
-    
 }
 
 .herotext h3 {
@@ -83,7 +82,7 @@ a:active {
 
 .herotext button {
     background-color: #3882F6;
-    border:#3882F6 solid 3px;
+    border:#3882F6 solid 1px;
     color:#E5E7EB;
     padding: 5px 25px;
     border-radius: 10px;
@@ -165,6 +164,8 @@ a:active {
 .calltoaction {
     background: #F9FAF8;
 }
+
+
 
 .calltoaction .banner {
     background-color: #3882F6;
